# loppu-firmware

./: .cproject  .gitignore  .mxproject  .project  CMakeLists.txt  CMakeLists_template.txt  Injector.ioc  STM32G031F6PX_FLASH.ld  _CMakeLists.txt  data_structure.yaml  mainpage.dox  riley.xcf  stepper_settings.yaml
devices/: CMakeLists.txt
devices/adapters/: CMakeLists.txt
devices/adapters/stm32/inc/: stm32_clock.h  stm32_gpio.h  stm32_timer.h  stm32_uart.h
devices/adapters/stm32/src/: stm32_gpio.c  stm32_timer.c
devices/injector/: CMakeLists.txt
devices/injector/Core/Inc/: needle_positioner.h  stm32g0xx_it.h
devices/injector/Core/Src/: main.c  stm32g0xx_it.c
devices/needle_positioner/inc/: needle_positioner.h
devices/needle_positioner/src/: main.c  needle_positioner.c
devices/needle_positioner/src/data_model/: coils.h  discrete_inputs.h  holding_registers.c  holding_registers.h  input_registers.c  input_registers.h
devices/pressure_sensor/: PressureSensor.ioc
devices/syringe_pump/Core/Inc/: config.h
devices/syringe_pump/Core/Src/: needle_positioner.c
drivers/: CMakeLists.txt
drivers/buttons/src/: buttons.c
drivers/data_model/src/: CMakeLists.txt
drivers/data_model/test/: CMakeLists.txt
drivers/data_model/test/inc/: data_model_test_groups.h
drivers/data_model/test/native/: test_coils.cpp  test_input_registers.cpp
drivers/gpio/inc/: gpio.h
drivers/gpio/inc/.private/: gpio_private.h
drivers/gpio/src/: CMakeLists.txt
drivers/gpio/test/: CMakeLists.txt  mock_gpio_test.cpp
drivers/modbus/: CMakeLists.txt
drivers/modbus/inc/.private/: server_dl.h  types.h
drivers/modbus/inc/public/: modbus.h
drivers/modbus/src/: data_model.c  server_app.c
drivers/modbus/test/: server_dl_test.cpp  util_test.cpp
drivers/serial/inc/: posix_serial.h  serial.h  win_serial.h
drivers/serial/inc/.private/: serial_private.h
drivers/serial/src/: CMakeLists.txt  posix_serial.c  serial.c
drivers/serial/test/: CMakeLists.txt  all_tests.cpp  posix_serial_test.cpp  serial_spy_test.cpp  win_serial_test.cpp
drivers/serial/test/inc/: serial_test_groups.h
drivers/stepper/inc/: a4988_stepper.h  stepper_controller.h  stepper_driver.h  tmc2209_stepper.h
drivers/stepper/inc/.private/: stepper_private.h
drivers/stepper/src/: CMakeLists.txt  stepper_controller.c
drivers/stepper/test/: CMakeLists.txt  stepper_test.cpp
drivers/stepper/test/inc/: stepper_test_groups.h
drivers/stm32g0xx/Src/: stm32g0xx_ll_tim.c
drivers/timer/inc/: posix_timer.h  pwm.h  timer.h  timer_math.h
drivers/timer/inc/.private/: pwm_private.h  timer_private.h
drivers/timer/src/: CMakeLists.txt  posix_timer.c  pwm.c  timer.c
drivers/timer/test/: all_tests.cpp  win_timer_test.cpp
lib/drivers/gpio/test/: CMakeLists.txt  all_tests.cpp  fake_gpio_test.cpp
lib/drivers/timer/test/: CMakeLists.txt  posix_timer_test.cpp
modules/: CMakeLists.txt  _CMakeLists.txt
modules/bootstrap/: CMakeLists.txt
modules/bootstrap/adapters/stm32/: CMakeLists.txt
modules/bootstrap/inc/: adapter.h  adapter_private.h  bootstrap.h
modules/bootstrap/src/: adapter.c
modules/bootstrap/src/stm32/: CMakeLists.txt
modules/buttons/inc/.private/: buttons_private.h
modules/buttons/src/: CMakeLists.txt
modules/inc/: sized_array.h
modules/inc/buttons/: buttons.h
modules/inc/buttons/.private/: buttons_private.h
modules/inc/data_model/: api.h  coils.h  data_model.h  discrete_inputs.h  holding_registers.h  holding_regsiters.h  input_registers.h  primary_table.h  primary_table_private.h
modules/inc/gpio/: gpio.h
modules/inc/gpio/.private/: gpio_private.h
modules/inc/serial/: posix_serial.h  serial.h
modules/inc/serial/.private/: serial_private.h
modules/inc/stepper/: a4988_stepper.h  linear_axis.h  stepper.h  stepper_controller.h  stepper_driver.h  tmc2209_stepper.h
modules/inc/stepper/.private/: stepper_controller_private.h  stepper_private.h
modules/inc/timer/: posix_timer.h  pwm.h  timer.h  timer_math.h  win_timer.h
modules/inc/timer/.private/: pwm_private.h  timer_private.h
modules/modbus/: CMakeLists.txt
modules/modbus/inc/.private/: crc.h  datalink_private.h
modules/modbus/inc/modbus/: data_model.h  datalink.h  func_codes.h  types.h  util.h
modules/modbus/src/: data_model.c  datalink.c  event_log.c  primary_table.c  server_app.c  server_dl.c  util.c
modules/modbus/test/: all_tests.cpp  datalink_test.cpp  server_app_test.cpp
modules/modbus/test/inc/: comm_test_groups.h
modules/src/buttons/: CMakeLists.txt  buttons.c
modules/src/data_model/: CMakeLists.txt  api.c  coils.c  data_model.c  discrete_inputs.c  holding_registers.c  holding_regsiters.c  input_registers.c  primary_table.c
modules/src/gpio/: CMakeLists.txt  gpio.c
modules/src/serial/: CMakeLists.txt  posix_serial.c  serial.c  win_serial.c
modules/src/stepper/: CMakeLists.txt  a4988_stepper.c  linear_axis.c  stepper.c  stepper_controller.c  stepper_driver.c  tmc2209_stepper.c
modules/src/timer/: CMakeLists.txt  posix_timer.c  pwm.c  timer.c  win_timer.c
modules/stepper/inc/.private/: stepper_controller_private.h
modules/stepper/src/: tmc2209_stepper.c
modules/stepper/test/: all_tests.cpp
modules/test/: CMakeLists.txt  all_tests.cpp
modules/test/buttons/: CMakeLists.txt  all_tests.cpp  buttons_test.cpp
modules/test/data_model/: CMakeLists.txt  all_tests.cpp
modules/test/gpio/: CMakeLists.txt
modules/test/serial/: CMakeLists.txt  posix_serial_test.cpp  serial_test.cpp
modules/test/stepper/: CMakeLists.txt  a4988_stepper_test.cpp  stepper_test.cpp  test_linear_axis.cpp
modules/test/timer/: CMakeLists.txt  posix_timer_test.cpp  pwm_test.cpp
src/devices/needle_positioner/: CMakeLists.txt  data_structure.yaml
src/devices/pressure_sensor/: CMakeLists.txt  data_structure.yaml
src/devices/syringe_pump/: CMakeLists.txt
src/devices/valve_2_pos/: CMakeLists.txt  data_structure.yaml  main.c
src/devices/valve_mixing/: CMakeLists.txt  data_structure.yaml  main.c
test/: CMakeLists.txt  not_working_periph.csv  working_periph.csv
test/embedded/system/: CMakeLists.txt
(+455 files in other folders)
